# sider

./: .bumpversion.cfg  .coveragerc  .flake8  .travis.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/source/: conf.py  index.rst
notebooks/: Map to ChEMBL.ipynb  pubchem_cid_to_chembl.tsv
src/bio2bel_sider/: __init__.py  __main__.py  cli.py  constants.py  manager.py  models.py  parser.py  utils.py  web.py
src/bio2bel_sider/parser/: __init__.py  indications.py  meddra.py  side_effects.py
tests/: __init__.py  cases.py  test_meddra_all_indications.tsv  test_meddra_all_se.tsv  test_populate.py
