##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = bio2bel_sider
version = version = '0.0.1-dev'
url = https://github.com/bio2bel/sider
author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
license = MIT
license_file = LICENSE
description = Bio2BEL SIDER.
long_description = file: README.rst
keywords =
    Biological Expression Language
    Drug Indications
    Drug Side Effects

[options]
install_requires =
    pybel>=0.12.1
    bio2bel>=0.1.5
    click
    pandas
    sqlalchemy
    tqdm
python_requires = >=3.6
packages = find:
package_dir =
    = src
zip-safe = false

[options.entry_points]
console_scripts =
    bio2bel_sider = bio2bel_sider:main
bio2bel =
    sider = bio2bel_sider

[options.packages.find]
where = src

# configuring bdist_wheel
[bdist_wheel]
python-tag = py36
